fixed new projects stats on mobile

--- a/web/wp-content/themes/cncf-twenty-two/source/scss/detached/annual-report-2023.scss
+++ b/web/wp-content/themes/cncf-twenty-two/source/scss/detached/annual-report-2023.scss
@@ -1507,13 +1507,19 @@ html {
 				}
 			}
 			&-col2 {
-				grid-column: span 6;
+				grid-column: span 12;
+				@media (min-width: 620px) {
+					grid-column: span 6;
+				}
 				@media (min-width: 800px) {
 					grid-column: span 3;
 				}
 			}
 			&-col3 {
-				grid-column: span 6;
+				grid-column: span 12;
+				@media (min-width: 620px) {
+					grid-column: span 6;
+				}
 				@media (min-width: 800px) {
 					grid-column: span 3;
 				}
